# structured_google_apis

./: LICENSE  README.md  pyproject.toml
structured_google_apis/google_docs/: __init__.py  batch_update.py  request.py  resource.py  response.py  utils.py
tools/: draft_generator.py
