[project]
name = "structured-google-apis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "ty>=0.0.1a4",
]
